// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render 1`] = `
<div>
  <label
    class="input default left"
  >
    <input
      type="text"
      value="My value"
    />
  </label>
</div>
`;

exports[`Input should render with autocomplete off 1`] = `
<div>
  <label
    class="input default left disabled"
  >
    <input
      autocomplete="off"
      disabled=""
      type="text"
      value="My value"
    />
  </label>
</div>
`;
